<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, NetSDLActivity!</string>
    <string name="app_name">POS</string>
    <string name="longin_title">NetSDL AMI Smart POS---登录</string>
    <string name="function_title">NetSDL AMI Smart POS---功能区</string>
    <string name="sale_title">NetSDL AMI Smart POS---收银</string>
    <string name="sale_return_title">NetSDL AMI Smart POS---客户退货</string>
    <string name="return_to_wh_title">NetSDL AMI Smart POS---返品</string>
    <string name="transfer_title">NetSDL AMI Smart POS---移动</string>
    <string name="check_title">NetSDL AMI Smart POS---盘点</string>
    <string name="check_upload_title">NetSDL AMI Smart POS---盘点上传</string>
    <string name="blank"></string>
    <string name="loginOperate">操作员登录</string>
    <string name="operaterID">用户编号输入</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="n0">０</string>
    <string name="n1">１</string>
    <string name="n2">２</string>
    <string name="n3">３</string>
    <string name="n4">４</string>
    <string name="n5">５</string>
    <string name="n6">６</string>
    <string name="n7">７</string>
    <string name="n8">８</string>
    <string name="n9">９</string>
    <string name="point">.</string>
    <string name="back">←</string>
    <string name="clear">清除</string>
    <string name="returnn">确认</string>
    <string name="Change">找零</string>
    <string name="Total">Total</string>
    <string name="Price">单价</string>
    <string name="Quantity">数量</string>
    <string name="lumpSum">合计</string>
    <string name="lumpSum1">应收合计</string>
    <string name="lumpSum2">已付合计</string>
    <string name="Payment">支付</string>
    <string name="CheckOut">Check Out</string>
    <string name="Pay">结算</string>
    <string name="Return">返回</string>
    <string name="Close">结单</string>
    <string name="GotoSystem">进入系统</string>
    <string name="CheckDB">数据检查</string>
    <string name="CommodityData">商品数据</string>
    <string name="StoreData">店铺数据</string>
    <string name="PaymentData">支付方法</string>
    <string name="distinguish">区分</string>
    <string name="LocalVersion">本地版本</string>
    <string name="HostVersion">远程版本</string>
    <string name="CanUpdate">可更新</string>
    <string name="NeedUpdate">需更新</string>
    <string name="ForceUpdate">强制更新</string>
    <string name="Cancel">取消</string>
    <string name="Loading">加载中</string>
    <string name="msg_no_id">没有此编号的用户</string>
    <string name="msg_id_must_be_number">编号必须是数字</string>
    <string name="msg_password_wrong">密码错误。重新输入密码或者点【退格】重新输入用户编码</string>
    <string name="msg_no_and_pass">用户名或密码错误</string>
    <string name="msg_no_sku">无此商品</string>
    <string name="s_view_btn">s_view_btn</string>
    <string name="Confirm">确认</string>
    <string name="type1">店铺销售</string>
    <string name="type2">客户退货</string>
    <string name="type3">店铺移出</string>
    <string name="type4">店铺移入</string>
    <string name="item_change">项目修改</string>
    <string name="function1">门店录入业务</string>
    <string name="function2">门店查询业务</string>
    <string name="shop">店铺</string>
    <string name="enter">进入</string>
    <string name="customer">顾客</string>
    <string name="document_date">单据日期</string>
    <string name="operator">操作人</string>
    <string name="remarks">备注</string>
    <string name="OutOfShop">移出店</string>
    <string name="MovedToShop">移入店</string>
    <string name="OutOfType">移出类型</string>
    <string name="SalesType">销售类型</string>
    <string name="msg_item_over_10">10件以上</string>
    <string name="ItemDiscount">折扣</string>
    <string name="pay_msg1">无商品</string>
    <string name="pay_msg2">支付未完成</string>
    <string name="pay_msg3">支付完成</string>
    <string name="oldPrice">原价</string>
    <string name="returnToWh">返品处理</string>
    <string name="scan">扫描</string>
    <string name="toWh">退货仓库</string>
    <string name="returnDate">退货日期</string>
    <string name="transferToShop">收货店铺</string>
    <string name="transferDate">移动日期</string>
    <string name="transfer">移动处理</string>
    <string name="subTotal">小计</string>
    <string name="messageNoSku">没有找到此商品</string>
    <string name="messageNoScan">请扫描商品</string>
    <string name="messageNoWh">无仓库信息，请下载设备数据</string>
    <string name="messageNoLogin">还没有登录</string>
    <string name="messageFail">操作失败</string>
    <string name="messageSuccess">操作成功</string>
    <string name="messageNoUpload">没有需要上传的数据</string>
    <string name="messageNoPermission">无权限操作</string>
    <string name="login">登录</string>
    <string name="logout">退出</string>
    <string name="storeManage">店长登录</string>
    <string name="saleMassage">提示：</string>
    <string name="saleAmt">合计:</string>
    <string name="saleCountQty">数量:</string>
    <string name="saleShop">店铺:</string>
    <string name="saleBusiness">收银</string>
    <string name="otherBusiness">其它业务</string>
    <string name="loginMethod">业务选择</string>
    <string name="seq">序号</string>
    <string name="itemName">名称</string>
    <string name="skuCd">SKU</string>
    <string name="price">价格</string>
    <string name="payAmt">应付:</string>
    <string name="paidAmt">已付金额:</string>
    <string name="payDiff">应付余额:</string>
    <string name="change">找零:</string>
    <string name="delete">删除</string>
    <string name="messagePriceChange">价格调整</string>
    <string name="messageQtyChange">数量调整</string>
    <string name="messageDiscountChange">折扣调整</string>
    <string name="check">盘点</string>
    <string name="itemCd">商品编码</string>
    <string name="checkUpload">盘点上传</string>
    <string name="checkType">盘点类型</string>
    <string name="checkDate">盘点日期</string>
    <string name="checkNo">盘点单号</string>
    <string name="barcode">条码</string>
    <string name="messageNoCheckNo">请输入盘点单号</string>
    <string name="messageNewCheck">新盘点单</string>
    <string name="messageNoData">无数据</string>
    <string name="newCheckFile">生成盘点文件</string>
    <string name="refresh">刷新</string>
    <string name="uploadFile">上传文件</string>
    <string name="uploadAllFile">上传全部文件</string>
    <string name="deleteFile">删除文件</string>
    <string name="fileName">文件名称</string>    
    <string name="fileSize">文件大小</string>    
</resources>