<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/black"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/returnToWh"
        android:textColor="@drawable/white"
        android:textSize="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/localShopTextView"
            android:layout_width="120dp"
            android:layout_height="fill_parent"
            android:text="@string/shop"
            android:textColor="@drawable/white"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/localShopEditText"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:ems="10" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/returnToWhTextView"
            android:layout_width="120dp"
            android:layout_height="fill_parent"
            android:text="@string/toWh"
            android:textColor="@drawable/white"
            android:textSize="30dp" />

        <Spinner
            android:id="@+id/returnToWhSpinner"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/setbar_bg" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/operatorTextView"
            android:layout_width="120dp"
            android:layout_height="fill_parent"
            android:text="@string/operator"
            android:textColor="@drawable/white"
            android:textSize="30dp" />

        <Spinner
            android:id="@+id/operatorSpinner"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/setbar_bg" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/returnDateTextView"
            android:layout_width="120dp"
            android:layout_height="fill_parent"
            android:text="@string/returnDate"
            android:textColor="@drawable/white"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/returnDateEditText"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/setbar_bg"
            android:ems="10"
            android:inputType="date"
            android:textSize="30dp" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/Cancel"
            android:textColor="@drawable/black"
            android:textSize="30dp" />

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/Confirm"
            android:textColor="@drawable/black"
            android:textSize="30dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5" >

    </LinearLayout>

</LinearLayout>